GpMessages/39031161983700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 22:22:57</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\nicos\Documents\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_NSR_85fdab\commondata\dag_1s2024_l_trabajo_1_parte_2_nsr.gdb\newcolumna.py", line 19
    arcpy.management.AddSpatialJoin(target_features= fcIn, join_features= manzanas, join_operation="JOIN_ONE_TO_ONE", join_type="KEEP_COMMON", field_mapping='TOTAL_PERS "TOTAL_PERS" true true false 4 Long 0 0,First,#,Manzanas_EC,TOTAL_PERS,-1,-1;TOTAL_VIVI "TOTAL_VIVI" true true false 4 Long 0 0,First,#,Manzanas_EC,TOTAL_VIVI,-1,-1, match_option="INTERSECT", search_radius=None, distance_field_name="", permanent_join="PERMANENT_FIELDS", match_fields=None)
                                                                                                                                                             ^
﻿SyntaxError: unterminated string literal (detected at line 19)
</msg><msg code="0" type="0">Failed script 3.2 Generar columna para calculo del indice...</msg><msg code="-2147467259" type="100">Failed to execute (indice).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 22:22:57 (Elapsed Time: 0,17 seconds)</msg></messages>